<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/NewEntryScrollViewTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margins"
        tools:context=".NewEntryActivity">

        <TextView
            style="@style/NewEntryTitleTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_book_title_title" />

        <EditText
            android:id="@+id/edit_book_title"
            style="@style/NewEntryEditTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_book_hint_title"
            android:inputType="textCapWords" />

        <TextView
            style="@style/NewEntryTitleTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/new_entry_item_spacing"
            android:text="@string/edit_book_title_author" />

        <EditText
            android:id="@+id/edit_book_author"
            style="@style/NewEntryEditTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_book_hint_author"
            android:inputType="textCapWords" />

        <TextView
            style="@style/NewEntryTitleTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/new_entry_item_spacing"
            android:text="@string/edit_book_title_publisher" />

        <EditText
            android:id="@+id/edit_book_publisher"
            style="@style/NewEntryEditTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_book_hint_blank"
            android:inputType="textCapWords" />

        <TextView
            style="@style/NewEntryTitleTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/new_entry_item_spacing"
            android:text="@string/edit_book_title_year" />

        <EditText
            android:id="@+id/edit_book_year"
            style="@style/NewEntryEditTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_book_hint_year"
            android:inputType="number" />

        <TextView
            style="@style/NewEntryTitleTextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/new_entry_item_spacing"
            android:layout_marginTop="@dimen/new_entry_item_spacing"
            android:text="@string/edit_book_title_subject" />

        <Spinner
            android:id="@+id/spinner_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/new_entry_spinner_padding_extra"
            android:spinnerMode="dialog"
            android:textAlignment="gravity" />

        <TextView
            style="@style/NewEntryTitleTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/new_entry_item_spacing"
            android:paddingBottom="@dimen/new_entry_title_padding_extra"
            android:text="@string/edit_book_title_quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/edit_book_quantity_remove"
                style="@style/NewEntryIconTheme"
                android:layout_width="@dimen/new_entry_icon_size"
                android:layout_height="@dimen/new_entry_icon_size"
                android:layout_marginStart="@dimen/new_entry_icon_margin_extra"
                android:onClick="decrement"
                android:src="@drawable/ic_remove_circle_accent_24dp" />

            <EditText
                android:id="@+id/edit_book_quantity"
                style="@style/NewEntryEditTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/edit_book_hint_quantity"
                android:inputType="number"
                android:paddingEnd="@dimen/new_entry_field_with_icon_margin_extra"
                android:paddingStart="@dimen/new_entry_field_with_icon_margin_extra"
                android:text="@string/edit_book_quantity_default" />

            <ImageView
                android:id="@+id/edit_book_quantity_add"
                style="@style/NewEntryIconTheme"
                android:layout_width="@dimen/new_entry_icon_size"
                android:layout_height="@dimen/new_entry_icon_size"
                android:onClick="increment"
                android:src="@drawable/ic_add_circle_accent_24dp" />

        </LinearLayout>

        <TextView
            style="@style/NewEntryTitleTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/new_entry_item_spacing"
            android:text="@string/edit_book_title_price" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_book_price"
                style="@style/NewEntryEditTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/edit_book_hint_price"
                android:inputType="number" />

            <TextView
                style="@style/NewEntryCurrency"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/new_entry_currency_margin_extra"
                android:layout_toEndOf="@id/edit_book_price"
                android:paddingBottom="@dimen/new_entry_currency_padding_extra"
                android:text="@string/edit_book_price_currency" />
        </RelativeLayout>

        <TextView
            style="@style/NewEntryTitleTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/new_entry_item_spacing"
            android:text="@string/edit_book_title_supplier" />

        <EditText
            android:id="@+id/edit_book_supplier"
            style="@style/NewEntryEditTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_book_hint_blank"
            android:inputType="textCapWords" />

        <TextView
            style="@style/NewEntryTitleTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/new_entry_item_spacing"
            android:paddingBottom="@dimen/new_entry_title_padding_extra"
            android:text="@string/edit_book_title_phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/edit_book_phone_intent"
                style="@style/NewEntryIconTheme"
                android:layout_width="@dimen/new_entry_icon_size"
                android:layout_height="@dimen/new_entry_icon_size"
                android:layout_marginStart="@dimen/new_entry_icon_margin_extra"
                android:src="@drawable/ic_phone_accent_24dp" />

            <EditText
                android:id="@+id/edit_book_phone"
                style="@style/NewEntryEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/new_entry_field_with_icon_margin_extra"
                android:hint="@string/edit_book_hint_blank"
                android:inputType="phone" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>